Fix mintlify lint errors

--- a/docs/_snippets/add-connection-profile.mdx
+++ b/docs/_snippets/add-connection-profile.mdx
@@ -20,8 +20,8 @@ Here is a demonstration:
     <iframe
       src="https://www.loom.com/embed/6eacaed618a746658a3c8e920d1d46b2"
       frameborder="0"
-      webkitallowfullscreen
-      mozallowfullscreen
+      webkitAllowFullScreen
+      mozAllowFullScreen
       allowfullscreen
       style={{
         position: "absolute",
