--- a/docs/_snippets/quickstart-package-install.mdx
+++ b/docs/_snippets/quickstart-package-install.mdx
@@ -15,9 +15,9 @@ Some packages we recommend you check out: [dbt_utils](https://github.com/dbt-lab
     <iframe
       src="https://www.loom.com/embed/5cf1aaa0708f43a993f8a2945473c7ac"
       frameborder="0"
-      webkitallowfullscreen
-      mozallowfullscreen
-      allowfullscreen
+      webkitAllowFullscreen
+      mozAllowFullScreen
+      allowFullScreen
       style={{
         position: "absolute",
         top: 0,
