--- a/docs/release-notes/releases/0.7.7.mdx
+++ b/docs/release-notes/releases/0.7.7.mdx
@@ -22,9 +22,9 @@ _April 12, 2023: [v0.7.7 Python](https://github.com/elementary-data/elementary/r
     <iframe
       src="https://www.loom.com/embed/b92d880b768d44a7bd2b0010a6223b62"
       frameborder="0"
-      webkitallowfullscreen
-      mozallowfullscreen
-      allowfullscreen
+      webkitAllowFullScreen
+      mozAllowFullScreen
+      allowFullScreen
       style={{
         position: "absolute",
         top: 0,
