--- a/docs/_snippets/install-dbt-package.mdx
+++ b/docs/_snippets/install-dbt-package.mdx
@@ -4,8 +4,8 @@
   <iframe
     src="https://www.loom.com/embed/5cf1aaa0708f43a993f8a2945473c7ac"
     frameborder="0"
-    webkitallowfullscreen
-    mozallowfullscreen
+    webkitAllowFullScreen
+    mozAllowFullScreen
     allowfullscreen
     className="w-full"
     style={{ height: "16rem" }}
