--- a/docs/guides/anomaly-detection-configuration/fail_on_zero.mdx
+++ b/docs/guides/anomaly-detection-configuration/fail_on_zero.mdx
@@ -8,7 +8,7 @@ sidebarTitle: "fail_on_zero"
 Elementary anomaly detection tests will fail whether there is any zero metric value within the detection period.
 If undefined, default is false.
 
-- _Default: false
+- _Default: false_
 - _Relevant tests: All anomaly detection tests_
 
 <RequestExample>
