--- a/docs/guides/anomaly-detection-configuration/fail_on_zero.mdx
+++ b/docs/guides/anomaly-detection-configuration/fail_on_zero.mdx
@@ -5,7 +5,7 @@ sidebarTitle: "fail_on_zero"
 
 `fail_on_zero: true/false`
 
-Elementary anomaly detection tests will fail whether there is any zero metric value within the detection period.
+Elementary anomaly detection tests will fail if there is a zero metric value within the detection period.
 If undefined, default is false.
 
 - _Default: false_
