--- a/docs/_snippets/setup-slack-integration.mdx
+++ b/docs/_snippets/setup-slack-integration.mdx
@@ -53,7 +53,7 @@ Go to the "OAauth & Permissions" page for your newly-created app, and add the fo
 - `groups:read` - View basic information about private channels that your slack app has been added to
 
 <img
-  src="https://github.com/elementary-data/elementary/blob/prod/docs/pics/slack-app-permissions.png?raw=true"
+  src="https://res.cloudinary.com/diuctyblm/image/upload/v1695889115/slack-app-permissions-new_bysiso.png"
   alt="Slack scopes"
 />
 
