--- a/docs/guides/anomaly-detection-tests/event-freshness-anomalies.mdx
+++ b/docs/guides/anomaly-detection-tests/event-freshness-anomalies.mdx
@@ -39,6 +39,9 @@ _Default configuration: `anomaly_direction: spike` to alert only on delays._
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="/guides/anomaly-detection-configuration/time-bucket"><font color="#CD7D55">period: [hour | day | week | month]</font></a>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="/guides/anomaly-detection-configuration/time-bucket"><font color="#CD7D55">count: int</font></a>
       &nbsp;&nbsp;&nbsp;&nbsp;<a href="/guides/anomaly-detection-configuration/seasonality"><font color="#CD7D55">seasonality: day_of_week</font></a>
+      &nbsp;&nbsp;&nbsp;&nbsp;<a href="/guides/anomaly-detection-configuration/detection-delay"><font color="#CD7D55">detection_delay:</font></a>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="/guides/anomaly-detection-configuration/detection-delay"><font color="#CD7D55">period: [hour | day | week | month]</font></a>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="/guides/anomaly-detection-configuration/detection-delay"><font color="#CD7D55">count: int</font></a>
  </code>
 </pre>
 
