--- a/docs/guides/elementary-tests-configuration.mdx
+++ b/docs/guides/elementary-tests-configuration.mdx
@@ -53,6 +53,9 @@ Elementary searches and prioritizes configuration in the following order:
             &nbsp;&nbsp;<a href="/guides/anomaly-detection-configuration/time-bucket"><font color="#CD7D55">period: [hour | day | week | month]</font></a>
             &nbsp;&nbsp;<a href="/guides/anomaly-detection-configuration/time-bucket"><font color="#CD7D55">count: int</font></a>
        -- <a href="/guides/anomaly-detection-configuration/seasonality"><font color="#CD7D55">seasonality: day_of_week</font></a>
+       -- <a href="/guides/anomaly-detection-configuration/detection-delay"><font color="#CD7D55">detection_delay:</font></a>
+            &nbsp;&nbsp;<a href="/guides/anomaly-detection-configuration/detection-delay"><font color="#CD7D55">period: [hour | day | week | month]</font></a>
+            &nbsp;&nbsp;<a href="/guides/anomaly-detection-configuration/detection-delay"><font color="#CD7D55">count: int</font></a>
 
       all_columns_anomalies test:
        -- <a href="/guides/anomaly-detection-configuration/column-anomalies"><font color="#CD7D55">column_anomalies: column monitors list</font></a>
