--- a/docs/guides/elementary-tests-configuration.mdx
+++ b/docs/guides/elementary-tests-configuration.mdx
@@ -47,8 +47,12 @@ Elementary searches and prioritizes configuration in the following order:
        -- <a href="/guides/anomaly-detection-configuration/anomaly-direction"><font color="#CD7D55">anomaly_direction: [both | spike | drop]</font></a>
 
       Anomaly detection tests with timestamp_column:
-       -- <a href="/guides/anomaly-detection-configuration/days-back"><font color="#CD7D55">days_back: int</font></a>
-       -- <a href="/guides/anomaly-detection-configuration/backfill-days"><font color="#CD7D55">backfill_days: int</font></a>
+       -- <a href="/guides/anomaly-detection-configuration/training-period"><font color="#CD7D55">training_period:</font></a>
+            &nbsp;&nbsp;<a href="/guides/anomaly-detection-configuration/training-period"><font color="#CD7D55">period: [hour | week | month]</font></a>
+            &nbsp;&nbsp;<a href="/guides/anomaly-detection-configuration/training-period"><font color="#CD7D55">count: int</font></a>
+       -- <a href="/guides/anomaly-detection-configuration/detection-period"><font color="#CD7D55">detection_period:</font></a>
+            &nbsp;&nbsp;<a href="/guides/anomaly-detection-configuration/detection-period"><font color="#CD7D55">period: [hour | week | month]</font></a>
+            &nbsp;&nbsp;<a href="/guides/anomaly-detection-configuration/detection-period"><font color="#CD7D55">count: int</font></a>
        -- <a href="/guides/anomaly-detection-configuration/time-bucket"><font color="#CD7D55">time_bucket:</font></a>
             &nbsp;&nbsp;<a href="/guides/anomaly-detection-configuration/time-bucket"><font color="#CD7D55">period: [hour | day | week | month]</font></a>
             &nbsp;&nbsp;<a href="/guides/anomaly-detection-configuration/time-bucket"><font color="#CD7D55">count: int</font></a>
