--- a/docs/guides/anomaly-detection-configuration/detection-period.mdx
+++ b/docs/guides/anomaly-detection-configuration/detection-period.mdx
@@ -20,12 +20,10 @@ This configuration should be changed according to your data delays.
 - _Default: 2 days_
 - _Relevant tests: Anomaly detection tests with `timestamp_column`_
 
-<Frame caption="detection_period change impact">
-  <img
-    src="https://res.cloudinary.com/diuctyblm/image/upload/v1681301376/Anomaly%20detection%20tests/backfill_days_mdjmon.png"
-    alt="detection_period change impact"
-  />
-</Frame>
+<img
+  src="/pics/anomalies/detection-period.png"
+  alt="Detection Period"
+/>
 
 <RequestExample>
 
