--- a/docs/guides/anomaly-detection-configuration/training-period.mdx
+++ b/docs/guides/anomaly-detection-configuration/training-period.mdx
@@ -15,12 +15,10 @@ This timeframe includes the training period and detection period.
 - _Default: 14 days_
 - _Relevant tests: Anomaly detection tests with `timestamp_column`_
 
-<Frame caption="training_period change impact">
-  <img
-    src="https://res.cloudinary.com/diuctyblm/image/upload/v1681301377/Anomaly%20detection%20tests/days_back_lpbr5p.png"
-    alt="training_period change impact"
-  />
-</Frame>
+<img
+  src="/pics/anomalies/training-period.png"
+  alt="Training Period"
+/>
 
 <RequestExample>
 
