--- a/docs/guides/anomaly-detection-configuration/detection-delay.mdx
+++ b/docs/guides/anomaly-detection-configuration/detection-delay.mdx
@@ -11,14 +11,10 @@ detection_delay:
 
 The duration for retracting the detection period.
 
-
 - _Default: 0_
 - _Relevant tests: Anomaly detection tests with `timestamp_column`_
 
-<img
-  src="/pics/anomalies/detection-delay.png"
-  alt="Detection Delay"
-/>
+<img src="/pics/anomalies/detection-delay.png" alt="Detection Delay" />
 
 <RequestExample>
 
