--- a/docs/guides/anomaly-detection-configuration/detection-period.mdx
+++ b/docs/guides/anomaly-detection-configuration/detection-period.mdx
@@ -20,10 +20,7 @@ This configuration should be changed according to your data delays.
 - _Default: 2 days_
 - _Relevant tests: Anomaly detection tests with `timestamp_column`_
 
-<img
-  src="/pics/anomalies/detection-period.png"
-  alt="Detection Period"
-/>
+<img src="/pics/anomalies/detection-period.png" alt="Detection Period" />
 
 <RequestExample>
 
