--- a/docs/guides/anomaly-detection-configuration/training-period.mdx
+++ b/docs/guides/anomaly-detection-configuration/training-period.mdx
@@ -15,10 +15,7 @@ This timeframe includes the training period and detection period.
 - _Default: 14 days_
 - _Relevant tests: Anomaly detection tests with `timestamp_column`_
 
-<img
-  src="/pics/anomalies/training-period.png"
-  alt="Training Period"
-/>
+<img src="/pics/anomalies/training-period.png" alt="Training Period" />
 
 <RequestExample>
 
