Renamed 'dbt_columns' to 'information_schema_columns'.

--- a/docs/_snippets/cloud/integrations/bigquery.mdx
+++ b/docs/_snippets/cloud/integrations/bigquery.mdx
@@ -18,7 +18,7 @@ Provide the following fields:
 In order to let Elementary Cloud access metadata about the columns in your data warehouse, you need to run the following command:
 
 ```
-dbt run-operation elementary.upload_dbt_columns
+dbt run-operation elementary.upload_information_schema_columns
 ```
 
 You may choose to run this command in one of the following ways:
