--- a/docs/guides/anomaly-detection-configuration/detection-delay.mdx
+++ b/docs/guides/anomaly-detection-configuration/detection-delay.mdx
@@ -50,4 +50,4 @@ vars:
 #### How it works?
 
 The `detection_delay` param only works for tests that have `timestamp_column` configuration.
-It does not affect the other duration parameters, like `backfill_days` or `days_back`.
+It does not affect the other duration parameters, like `detection_period` or `training_period`.
