--- a/docs/guides/anomaly-detection-configuration/training-period.mdx
+++ b/docs/guides/anomaly-detection-configuration/training-period.mdx
@@ -10,7 +10,7 @@ training_period:
 ```
 
 The maximal timeframe for which the test will collect data.
-This timeframe includes the training period and detection period.
+This timeframe includes the training period and detection period. If a detection delay is defined, the whole training period is being delayed.
 
 - _Default: 14 days_
 - _Relevant tests: Anomaly detection tests with `timestamp_column`_
