--- a/docs/cloud/general/ci.mdx
+++ b/docs/cloud/general/ci.mdx
@@ -3,7 +3,7 @@ title: "Elementary CI"
 sidebarTitle: "Elementary CI"
 ---
 
-### Coming soon - Elementary Pull request impact analysis!
+### Closed beta - Elementary Pull request impact analysis!
 
 When making changes to your data project, it can sometimes be hard to fully understand the impact of your changes and be certain that there are no unintended consequences.
 
@@ -14,9 +14,13 @@ You'll also be able to see if any of your dbt tests are failing or your models a
 
 Elementary CI automations will help you make changes with confidence and seeing the full picture before merging your pull request.
 
-## Want to learn more?
+## Want to join the beta?
 
 <Card
   title="Schedule a call"
   href="https://calendly.com/maayansa/call-with-elementary-data"
+></Card>
+<Card
+  title="Reach out to us on slack"
+  href="https://join.slack.com/t/elementary-community/shared_invite/zt-1b9vogqmq-y~IRhc2396CbHNBXLsrXcA"
 ></Card>
