--- a/docs/cloud/guides/troubleshoot.mdx
+++ b/docs/cloud/guides/troubleshoot.mdx
@@ -2,9 +2,21 @@
 title: "Troubleshooting"
 ---
 
-## Columns could not be loaded
+### Column information cannot be retrieved
 
 This error can happen because of a few reasons:
 
 1. check that your elementary dbt package version is 0.12.0 or higher
 2. check that the user you are using to connect to your database has permissions to access the information schema
+
+For more information on the permissions required by each data warehouse:
+
+[Snowflake](/cloud/integrations/dwh/Snowflake#permissions-and-security)
+
+[Bigquery](/cloud/integrations/dwh/Bigquery#permissions-and-security)
+
+[Redshift](/cloud/integrations/dwh/Redshift#permissions-and-security)
+
+[Databricks](/cloud/integrations/dwh/Databricks#permissions-and-security)
+
+[Postgres](/cloud/integrations/dwh/Postgres#permissions-and-security)
