first draft - add data tests and features sections

--- a/docs/data-tests/schema-tests/exposure-tests.mdx
+++ b/docs/data-tests/schema-tests/exposure-tests.mdx
@@ -1,10 +1,6 @@
 ---
-title: "Add exposure validation tests"
+title: "Exposure validation tests"
 ---
-
-After you [install the dbt package](/quickstart#install-the-dbt-package), you can add Elementary exposure validation tests.
-
-## Exposure validation dbt tests
 
 Elementary dbt package includes **exposure validation tests, implemented as [dbt tests](https://docs.getdbt.com/docs/building-a-dbt-project/tests)**.
 These tests can detect changes in your models' columns that break downstream exposures, such as BI dashboards.
