--- a/docs/quickstart-cli.mdx
+++ b/docs/quickstart-cli.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Quickstart: Elementary CLI"
 sidebarTitle: "Install Elementary CLI"
+icon: "square-2"
 ---
 
 Before installing the CLI, make sure to complete the steps dbt package installation, including executing `dbt run` with the Elementary package models.
