--- a/docs/quickstart-cloud.mdx
+++ b/docs/quickstart-cloud.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Quickstart: Elementary Cloud"
 sidebarTitle: "Connect Elementary Cloud"
+icon: "square-2"
 ---
 
 <Snippet file="cloud/signup-and-connect-elementary-cloud.mdx" />
