--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -2,6 +2,7 @@
 title: "Elementary"
 sidebarTitle: "Introduction"
 description: "dbt native data observability"
+icon: "fire"
 ---
 
 Monitor your data pipelines in minutes, in your dbt project. Gain immediate visibility, detect data issues, send actionable alerts, and understand impact and root cause.
@@ -18,22 +19,22 @@ Monitor your data pipelines in minutes, in your dbt project. Gain immediate visi
 ## Quick start
 
 <CardGroup cols={2}>
-  <Card title="Elementary Cloud" icon="cloud" iconType="solid">
+  <Card title="Elementary Cloud" icon="cloud" iconType="solid" href="quickstart">
     <br/>
     Fully managed data observability solution with premium features.
     <br/>
     Integrations:
     <img
-    src="https://res.cloudinary.com/diuctyblm/image/upload/v1699196532/cloud_integrations_icons_fd41ur.png"
+    src="https://res.cloudinary.com/diuctyblm/image/upload/v1699269702/cloud_integrations_4_qlaycc.png"
     />
   </Card>
-  <Card title="Elementary OSS" icon="square-terminal" iconType="solid">
+  <Card title="Elementary OSS" icon="square-terminal" iconType="solid" href="quickstart-cli-package">
     <br/>
     Deploy, orchestrate and self-host Elementary CLI in your environment.
     <br/>
     Integrations:
     <img
-    src="https://res.cloudinary.com/diuctyblm/image/upload/v1699196532/cli_xto3ti.png"
+    src="https://res.cloudinary.com/diuctyblm/image/upload/v1699269702/cli_integrations_4_bach1a.png"
     />
   </Card>
 </CardGroup>
@@ -41,14 +42,11 @@ Monitor your data pipelines in minutes, in your dbt project. Gain immediate visi
 
 ## Key features
 
-
-
-
 <CardGroup cols={1}>
   <Card title="Data anomaly detection" icon="monitor-waveform" iconType="solid">
     Monitor data quality metrics, freshness, volume and schema changes.
   </Card>
-  <Card title="dbt artifacts & run results" icon="table-tree" iconType="regular">
+  <Card title="dbt artifacts, run results and model performance" icon="table-tree" iconType="regular">
     Upload metadata, run and test results to tables as part of your jobs.
   </Card>
   <Card title="Slack alerts" icon="slack" iconType="regular">
@@ -56,13 +54,6 @@ Monitor your data pipelines in minutes, in your dbt project. Gain immediate visi
   </Card>
   <Card title="Data observability dashboard" icon="browsers" iconType="solid">
     Inspect your data health overview, test results, models performance and data lineage. 
-  </Card>
-  <Card title="End-to-end data lineage" icon="arrow-progress" iconType="regular">
-    <img
-      width="120"
-      src="https://res.cloudinary.com/diuctyblm/image/upload/v1699204131/padded_cloud_baahhh.png"
-    />
-    Inspect dependencies including Column Level Lineage and integration with BI tools.
   </Card>
   <Card title="End-to-end data lineage" icon=
     {<svg width="102" height="17" viewBox="0 0 102 17" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -73,39 +64,34 @@ Monitor your data pipelines in minutes, in your dbt project. Gain immediate visi
     }>
     Inspect dependencies including Column Level Lineage and integration with BI tools.
   </Card>
+  <Card title="Automated monitors" icon=
+    {<svg width="102" height="17" viewBox="0 0 102 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <rect x="0.5" y="1" width="101" height="15" rx="7.5" fill="#FE9356" fill-opacity="0.1"/>
+      <path d="M6.612 11.5V5.2H10.725V6.127H7.764V7.855H10.455V8.755H7.764V10.573H10.725V11.5H6.612ZM11.8151 11.5V5.2H12.9671V10.6H15.7571V11.5H11.8151ZM16.7722 11.5V5.2H20.8852V6.127H17.9242V7.855H20.6152V8.755H17.9242V10.573H20.8852V11.5H16.7722ZM21.9753 11.5V5.2H23.3433L25.3503 9.196L27.3303 5.2H28.6983V11.5H27.5463V7.153L25.7913 10.6H24.8823L23.1273 7.153V11.5H21.9753ZM29.9206 11.5V5.2H34.0336V6.127H31.0726V7.855H33.7636V8.755H31.0726V10.573H34.0336V11.5H29.9206ZM35.1237 11.5V5.2H36.2757L39.2367 9.637V5.2H40.3887V11.5H39.2367L36.2757 7.072V11.5H35.1237ZM43.077 11.5V6.127H41.241V5.2H46.074V6.127H44.229V11.5H43.077ZM45.8545 11.5L48.1585 5.2H49.4545L51.7585 11.5H50.5345L50.0305 10.042H47.5735L47.0605 11.5H45.8545ZM47.8885 9.142H49.7155L48.7975 6.523L47.8885 9.142ZM52.57 11.5V5.2H54.883C55.387 5.2 55.801 5.287 56.125 5.461C56.455 5.629 56.701 5.86 56.863 6.154C57.025 6.442 57.106 6.763 57.106 7.117C57.106 7.501 57.004 7.852 56.8 8.17C56.602 8.488 56.29 8.719 55.864 8.863L57.169 11.5H55.846L54.676 9.016H53.722V11.5H52.57ZM53.722 8.17H54.811C55.195 8.17 55.477 8.077 55.657 7.891C55.837 7.705 55.927 7.459 55.927 7.153C55.927 6.853 55.837 6.613 55.657 6.433C55.483 6.253 55.198 6.163 54.802 6.163H53.722V8.17ZM59.5867 11.5V9.259L57.4717 5.2H58.7767L60.1717 8.107L61.5577 5.2H62.8447L60.7387 9.259V11.5H59.5867ZM68.5802 11.608C67.9442 11.608 67.3982 11.473 66.9422 11.203C66.4862 10.927 66.1352 10.546 65.8892 10.06C65.6432 9.568 65.5202 9.001 65.5202 8.359C65.5202 7.717 65.6432 7.15 65.8892 6.658C66.1352 6.166 66.4862 5.782 66.9422 5.506C67.3982 5.23 67.9442 5.092 68.5802 5.092C69.3362 5.092 69.9542 5.281 70.4342 5.659C70.9202 6.031 71.2232 6.556 71.3432 7.234H70.0742C69.9962 6.892 69.8282 6.625 69.5702 6.433C69.3182 6.235 68.9822 6.136 68.5622 6.136C67.9802 6.136 67.5242 6.334 67.1942 6.73C66.8642 7.126 66.6992 7.669 66.6992 8.359C66.6992 9.049 66.8642 9.592 67.1942 9.988C67.5242 10.378 67.9802 10.573 68.5622 10.573C68.9822 10.573 69.3182 10.483 69.5702 10.303C69.8282 10.117 69.9962 9.862 70.0742 9.538H71.3432C71.2232 10.186 70.9202 10.693 70.4342 11.059C69.9542 11.425 69.3362 11.608 68.5802 11.608ZM72.363 11.5V5.2H73.515V10.6H76.305V11.5H72.363ZM79.7007 11.608C79.0707 11.608 78.5187 11.47 78.0447 11.194C77.5767 10.918 77.2077 10.537 76.9377 10.051C76.6737 9.559 76.5417 8.992 76.5417 8.35C76.5417 7.708 76.6737 7.144 76.9377 6.658C77.2077 6.166 77.5767 5.782 78.0447 5.506C78.5187 5.23 79.0707 5.092 79.7007 5.092C80.3247 5.092 80.8737 5.23 81.3477 5.506C81.8217 5.782 82.1907 6.166 82.4547 6.658C82.7187 7.144 82.8507 7.708 82.8507 8.35C82.8507 8.992 82.7187 9.559 82.4547 10.051C82.1907 10.537 81.8217 10.918 81.3477 11.194C80.8737 11.47 80.3247 11.608 79.7007 11.608ZM79.7007 10.573C80.3007 10.573 80.7777 10.375 81.1317 9.979C81.4917 9.583 81.6717 9.04 81.6717 8.35C81.6717 7.66 81.4917 7.117 81.1317 6.721C80.7777 6.325 80.3007 6.127 79.7007 6.127C79.1007 6.127 78.6207 6.325 78.2607 6.721C77.9007 7.117 77.7207 7.66 77.7207 8.35C77.7207 9.04 77.9007 9.583 78.2607 9.979C78.6207 10.375 79.1007 10.573 79.7007 10.573ZM86.2979 11.608C85.8359 11.608 85.4189 11.518 85.0469 11.338C84.6749 11.152 84.3779 10.873 84.1559 10.501C83.9399 10.129 83.8319 9.658 83.8319 9.088V5.2H84.9839V9.097C84.9839 9.589 85.1009 9.955 85.3349 10.195C85.5749 10.435 85.9049 10.555 86.3249 10.555C86.7389 10.555 87.0659 10.435 87.3059 10.195C87.5459 9.955 87.6659 9.589 87.6659 9.097V5.2H88.8179V9.088C88.8179 9.658 88.7039 10.129 88.4759 10.501C88.2479 10.873 87.9419 11.152 87.5579 11.338C87.1799 11.518 86.7599 11.608 86.2979 11.608ZM89.9938 11.5V5.2H92.1448C92.8828 5.2 93.4888 5.332 93.9628 5.596C94.4428 5.854 94.7968 6.22 95.0248 6.694C95.2588 7.162 95.3758 7.714 95.3758 8.35C95.3758 8.986 95.2588 9.541 95.0248 10.015C94.7968 10.483 94.4428 10.849 93.9628 11.113C93.4888 11.371 92.8828 11.5 92.1448 11.5H89.9938ZM91.1458 10.51H92.0908C92.6188 10.51 93.0358 10.426 93.3418 10.258C93.6478 10.084 93.8668 9.838 93.9988 9.52C94.1308 9.196 94.1968 8.806 94.1968 8.35C94.1968 7.9 94.1308 7.513 93.9988 7.189C93.8668 6.865 93.6478 6.616 93.3418 6.442C93.0358 6.268 92.6188 6.181 92.0908 6.181H91.1458V10.51Z" fill="#FE9356"/>
+      <rect x="0.5" y="1" width="101" height="15" rx="7.5" stroke="#FE9356"/>
+      </svg>
+    }>
+    Out of the box freshness, volume and schema monitoring.
+  </Card>
+  <Card title="Data Catalog" icon=
+    {<svg width="102" height="17" viewBox="0 0 102 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <rect x="0.5" y="1" width="101" height="15" rx="7.5" fill="#FE9356" fill-opacity="0.1"/>
+      <path d="M6.612 11.5V5.2H10.725V6.127H7.764V7.855H10.455V8.755H7.764V10.573H10.725V11.5H6.612ZM11.8151 11.5V5.2H12.9671V10.6H15.7571V11.5H11.8151ZM16.7722 11.5V5.2H20.8852V6.127H17.9242V7.855H20.6152V8.755H17.9242V10.573H20.8852V11.5H16.7722ZM21.9753 11.5V5.2H23.3433L25.3503 9.196L27.3303 5.2H28.6983V11.5H27.5463V7.153L25.7913 10.6H24.8823L23.1273 7.153V11.5H21.9753ZM29.9206 11.5V5.2H34.0336V6.127H31.0726V7.855H33.7636V8.755H31.0726V10.573H34.0336V11.5H29.9206ZM35.1237 11.5V5.2H36.2757L39.2367 9.637V5.2H40.3887V11.5H39.2367L36.2757 7.072V11.5H35.1237ZM43.077 11.5V6.127H41.241V5.2H46.074V6.127H44.229V11.5H43.077ZM45.8545 11.5L48.1585 5.2H49.4545L51.7585 11.5H50.5345L50.0305 10.042H47.5735L47.0605 11.5H45.8545ZM47.8885 9.142H49.7155L48.7975 6.523L47.8885 9.142ZM52.57 11.5V5.2H54.883C55.387 5.2 55.801 5.287 56.125 5.461C56.455 5.629 56.701 5.86 56.863 6.154C57.025 6.442 57.106 6.763 57.106 7.117C57.106 7.501 57.004 7.852 56.8 8.17C56.602 8.488 56.29 8.719 55.864 8.863L57.169 11.5H55.846L54.676 9.016H53.722V11.5H52.57ZM53.722 8.17H54.811C55.195 8.17 55.477 8.077 55.657 7.891C55.837 7.705 55.927 7.459 55.927 7.153C55.927 6.853 55.837 6.613 55.657 6.433C55.483 6.253 55.198 6.163 54.802 6.163H53.722V8.17ZM59.5867 11.5V9.259L57.4717 5.2H58.7767L60.1717 8.107L61.5577 5.2H62.8447L60.7387 9.259V11.5H59.5867ZM68.5802 11.608C67.9442 11.608 67.3982 11.473 66.9422 11.203C66.4862 10.927 66.1352 10.546 65.8892 10.06C65.6432 9.568 65.5202 9.001 65.5202 8.359C65.5202 7.717 65.6432 7.15 65.8892 6.658C66.1352 6.166 66.4862 5.782 66.9422 5.506C67.3982 5.23 67.9442 5.092 68.5802 5.092C69.3362 5.092 69.9542 5.281 70.4342 5.659C70.9202 6.031 71.2232 6.556 71.3432 7.234H70.0742C69.9962 6.892 69.8282 6.625 69.5702 6.433C69.3182 6.235 68.9822 6.136 68.5622 6.136C67.9802 6.136 67.5242 6.334 67.1942 6.73C66.8642 7.126 66.6992 7.669 66.6992 8.359C66.6992 9.049 66.8642 9.592 67.1942 9.988C67.5242 10.378 67.9802 10.573 68.5622 10.573C68.9822 10.573 69.3182 10.483 69.5702 10.303C69.8282 10.117 69.9962 9.862 70.0742 9.538H71.3432C71.2232 10.186 70.9202 10.693 70.4342 11.059C69.9542 11.425 69.3362 11.608 68.5802 11.608ZM72.363 11.5V5.2H73.515V10.6H76.305V11.5H72.363ZM79.7007 11.608C79.0707 11.608 78.5187 11.47 78.0447 11.194C77.5767 10.918 77.2077 10.537 76.9377 10.051C76.6737 9.559 76.5417 8.992 76.5417 8.35C76.5417 7.708 76.6737 7.144 76.9377 6.658C77.2077 6.166 77.5767 5.782 78.0447 5.506C78.5187 5.23 79.0707 5.092 79.7007 5.092C80.3247 5.092 80.8737 5.23 81.3477 5.506C81.8217 5.782 82.1907 6.166 82.4547 6.658C82.7187 7.144 82.8507 7.708 82.8507 8.35C82.8507 8.992 82.7187 9.559 82.4547 10.051C82.1907 10.537 81.8217 10.918 81.3477 11.194C80.8737 11.47 80.3247 11.608 79.7007 11.608ZM79.7007 10.573C80.3007 10.573 80.7777 10.375 81.1317 9.979C81.4917 9.583 81.6717 9.04 81.6717 8.35C81.6717 7.66 81.4917 7.117 81.1317 6.721C80.7777 6.325 80.3007 6.127 79.7007 6.127C79.1007 6.127 78.6207 6.325 78.2607 6.721C77.9007 7.117 77.7207 7.66 77.7207 8.35C77.7207 9.04 77.9007 9.583 78.2607 9.979C78.6207 10.375 79.1007 10.573 79.7007 10.573ZM86.2979 11.608C85.8359 11.608 85.4189 11.518 85.0469 11.338C84.6749 11.152 84.3779 10.873 84.1559 10.501C83.9399 10.129 83.8319 9.658 83.8319 9.088V5.2H84.9839V9.097C84.9839 9.589 85.1009 9.955 85.3349 10.195C85.5749 10.435 85.9049 10.555 86.3249 10.555C86.7389 10.555 87.0659 10.435 87.3059 10.195C87.5459 9.955 87.6659 9.589 87.6659 9.097V5.2H88.8179V9.088C88.8179 9.658 88.7039 10.129 88.4759 10.501C88.2479 10.873 87.9419 11.152 87.5579 11.338C87.1799 11.518 86.7599 11.608 86.2979 11.608ZM89.9938 11.5V5.2H92.1448C92.8828 5.2 93.4888 5.332 93.9628 5.596C94.4428 5.854 94.7968 6.22 95.0248 6.694C95.2588 7.162 95.3758 7.714 95.3758 8.35C95.3758 8.986 95.2588 9.541 95.0248 10.015C94.7968 10.483 94.4428 10.849 93.9628 11.113C93.4888 11.371 92.8828 11.5 92.1448 11.5H89.9938ZM91.1458 10.51H92.0908C92.6188 10.51 93.0358 10.426 93.3418 10.258C93.6478 10.084 93.8668 9.838 93.9988 9.52C94.1308 9.196 94.1968 8.806 94.1968 8.35C94.1968 7.9 94.1308 7.513 93.9988 7.189C93.8668 6.865 93.6478 6.616 93.3418 6.442C93.0358 6.268 92.6188 6.181 92.0908 6.181H91.1458V10.51Z" fill="#FE9356"/>
+      <rect x="0.5" y="1" width="101" height="15" rx="7.5" stroke="#FE9356"/>
+      </svg>
+    }>
+    Explore and discover data sets, manage your documentation in code.
+  </Card>
 </CardGroup>
 
 
-- **Data observability report ([live demo](https://storage.googleapis.com/elementary_static/elementary_demo.html))**
-
-  Generate a data observability report, host it or share with your team.
-
-- **Data anomaly detection as dbt tests**
-
-  Monitoring of data quality metrics, freshness, volume and schema changes, including anomaly detection. Elementary data monitors are configured and executed like native tests in dbt your project.
-
-- **Models performance**
-
-  Visibility of execution times, easy detection of degradation and bottlenecks.
-
-- **dbt artifacts and run results**
-
-  Uploading and modeling of dbt artifacts, run and test results to tables as part of your runs.
-
-- **Slack alerts**
-
-  Get informative notifications on data issues, schema changes, models and tests failures.
-
-- **Data lineage**
-
-  Inspect upstream and downstream dependencies to understand impact and root cause of data issues.
-
 ## How it works?
 
-For the data monitoring and dbt artifacts collection, we developed a [dbt package](/quickstart#install-the-dbt-package).
-The monitoring configuration is configured in your dbt project, and the monitors are dbt macros and models. All the collected data is saved to an elementary schema in your DWH.
+In your dbt project, you install the [Elementary dbt package](/quickstart#install-the-dbt-package).
+The package will collect metadata and run results to a dedicated Elementary schema. 
+You can use elementary tests in your dbt project, configured just like native dbt tests.
 
-After deploying the dbt package, connect to [Elementary Cloud](/cloud/introduction) or install the [Elementary CLI](/understand-elementary/cli-install#install-and-configure) to work with the UI and send Slack alerts.
+[Elementary Cloud](/cloud/introduction) or [Elementary CLI](/understand-elementary/cli-install#install-and-configure) will connect to your data warehouse, read from the Elementary schema, and present the results in the UI / alerts.  
 
 ## Community & Support
 
