--- a/docs/guides/add-exposure-tests.mdx
+++ b/docs/guides/add-exposure-tests.mdx
@@ -33,7 +33,8 @@ exposures:
 ```
 
 <Tip>
-  You can read up about exposures and how to add them at [dbt documentation](https://docs.getdbt.com/docs/build/exposures)
+  You can read up about exposures and how to add them at [dbt
+  documentation](https://docs.getdbt.com/docs/build/exposures)
 </Tip>
 
 ### Adding the Elementary exposure information
@@ -64,7 +65,8 @@ exposures:
 ```
 
 <Tip>
-  In Elementary Cloud, the exposures and exposure validation tests are added automatically, leveraging an integration with your BI tool.
+  In Elementary Cloud, the exposures and exposure validation tests are added
+  automatically, leveraging an integration with your BI tool.
 </Tip>
 
 You can optionally also specify the column data type (`data_type`)
