--- a/docs/cloud/general/ci.mdx
+++ b/docs/cloud/general/ci.mdx
@@ -22,5 +22,5 @@ Elementary CI automations will help you make changes with confidence and seeing 
 ></Card>
 <Card
   title="Reach out to us on slack"
-  href="https://join.slack.com/t/elementary-community/shared_invite/zt-1b9vogqmq-y~IRhc2396CbHNBXLsrXcA"
+  href="https://elementary-data.com/community"
 ></Card>
