--- a/docs/deployment-and-configuration/elementary-in-production.mdx
+++ b/docs/deployment-and-configuration/elementary-in-production.mdx
@@ -86,4 +86,4 @@ Some options include:
 ## Need help?
 
 If you want to consult on production deployment, we would love to help!  
-Please reach out to us on [Slack](https://join.slack.com/t/elementary-community/shared_invite/zt-uehfrq2f-zXeVTtXrjYRbdE_V6xq4Rg), we could talk there or schedule a deployment video call.
+Please reach out to us on [Slack](https://elementary-data.com/community), we could talk there or schedule a deployment video call.
