--- a/docs/deployment-and-configuration/github-actions.mdx
+++ b/docs/deployment-and-configuration/github-actions.mdx
@@ -14,5 +14,5 @@ More information can be found in [Elementary's GitHub Action](https://github.com
 If you have any questions, comments, or feedback, we'd love to hear it!  
 Please open an issue
 on [GitHub](https://github.com/elementary-data/elementary/issues/new) or ask us
-on [Slack](https://join.slack.com/t/elementary-community/shared_invite/zt-uehfrq2f-zXeVTtXrjYRbdE_V6xq4Rg) in the
+on [Slack](https://elementary-data.com/community) in the
 #support channel, we are very responsive!
