--- a/docs/integrations/postgres.mdx
+++ b/docs/integrations/postgres.mdx
@@ -14,5 +14,5 @@ title: "Postgres"
 ### Have a question?
 
 We are available
-on [Slack](https://join.slack.com/t/elementary-community/shared_invite/zt-uehfrq2f-zXeVTtXrjYRbdE_V6xq4Rg), reach out
+on [Slack](https://elementary-data.com/community), reach out
 for any kind of help!
