--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -165,7 +165,7 @@ You can use elementary tests in your dbt project, configured just like native db
 
 For additional information and help, you can use one of these channels:
 
-- [Slack](https://join.slack.com/t/elementary-community/shared_invite/zt-uehfrq2f-zXeVTtXrjYRbdE_V6xq4Rg) (live chat with the team, support, consult with us, etc.)
+- [Slack](https://elementary-data.com/community) (live chat with the team, support, consult with us, etc.)
 - [GitHub issues](https://github.com/elementary-data/elementary-lineage/issues) (bug reports, feature requests, contributions)
 - [Twitter](https://twitter.com/ElementaryData) (updates on new releases and stuff)
 
