--- a/docs/quickstart/send-slack-alerts.mdx
+++ b/docs/quickstart/send-slack-alerts.mdx
@@ -71,4 +71,4 @@ your dbt job ends to monitor the latest data updates).
 
 Read more about how to deploy [Elementary in production](/deployment-and-configuration/elementary-in-production).
 If you need help or wish to consult on this, reach out to us
-on [Slack](https://join.slack.com/t/elementary-community/shared_invite/zt-uehfrq2f-zXeVTtXrjYRbdE_V6xq4Rg).
+on [Slack](https://elementary-data.com/community).
