--- a/docs/quickstart/share-report-ui.mdx
+++ b/docs/quickstart/share-report-ui.mdx
@@ -29,4 +29,4 @@ After you decide how to distribute the report and set up the relevant platform, 
 
 ## Missing something?
 
-Want to share the report with a different method or consult on deployment? Reach out to us on [Slack](https://join.slack.com/t/elementary-community/shared_invite/zt-uehfrq2f-zXeVTtXrjYRbdE_V6xq4Rg) or open a [Github issue](https://github.com/elementary-data/elementary/issues/new/choose).
+Want to share the report with a different method or consult on deployment? Reach out to us on [Slack](https://elementary-data.com/community) or open a [Github issue](https://github.com/elementary-data/elementary/issues/new/choose).
