--- a/docs/understand-elementary/cli-install.mdx
+++ b/docs/understand-elementary/cli-install.mdx
@@ -82,6 +82,6 @@ anonymous_usage_tracking: False
 
 <Accordion title="Have a question?">
 
-We are available on [Slack](https://join.slack.com/t/elementary-community/shared_invite/zt-uehfrq2f-zXeVTtXrjYRbdE_V6xq4Rg), reach out for any kind of help!
+We are available on [Slack](https://elementary-data.com/community), reach out for any kind of help!
 
 </Accordion>
