--- a/docs/understand-elementary/elementary-overview.mdx
+++ b/docs/understand-elementary/elementary-overview.mdx
@@ -4,7 +4,7 @@ title: "Overview"
 
 Our goal is to provide data teams **immediate visibility**, **detection of data issues**, and **impact analysis**. We focus on **simple effortless setup**, and integrations with the existing stack.
 
-(Not a dbt user? you can still use Elementary, reach out to us on [Slack](https://join.slack.com/t/elementary-community/shared_invite/zt-uehfrq2f-zXeVTtXrjYRbdE_V6xq4Rg) and we will help).
+(Not a dbt user? you can still use Elementary, reach out to us on [Slack](https://elementary-data.com/community) and we will help).
 
 ## Data observability report UI
 
