--- a/docs/_snippets/cloud/signup-and-connect-elementary-cloud.mdx
+++ b/docs/_snippets/cloud/signup-and-connect-elementary-cloud.mdx
@@ -37,7 +37,7 @@ Elementary IP for allowlist: `3.126.156.226`
 
 ### Need help with onboarding?
 
-We can provide [support on Slack](https://join.slack.com/t/elementary-community/shared_invite/zt-1b9vogqmq-y~IRhc2396CbHNBXLsrXcA) or hop on an [onboarding call](https://savvycal.com/MaayanSa/df29881c).
+We can provide [support on Slack](https://elementary-data.com/community) or hop on an [onboarding call](https://savvycal.com/MaayanSa/df29881c).
 
 ### What happens now?
 
