--- a/docs/integrations/bigquery.mdx
+++ b/docs/integrations/bigquery.mdx
@@ -13,4 +13,4 @@ title: "BigQuery"
 
 ### Have a question?
 
-We are available on [Slack](https://join.slack.com/t/elementary-community/shared_invite/zt-uehfrq2f-zXeVTtXrjYRbdE_V6xq4Rg), reach out for any kind of help!
+We are available on [Slack](https://elementary-data.com/community), reach out for any kind of help!
