--- a/docs/data-tests/anomaly-detection-tests/all-columns-anomalies.mdx
+++ b/docs/data-tests/anomaly-detection-tests/all-columns-anomalies.mdx
@@ -1,6 +1,6 @@
 ---
+sidebarTitle: "All columns anomalies"
 title: "all_columns_anomalies"
-sidebarTitle: "all_columns_anomalies"
 ---
 
 `elementary.all_columns_anomalies`
