--- a/docs/data-tests/anomaly-detection-tests/column-anomalies.mdx
+++ b/docs/data-tests/anomaly-detection-tests/column-anomalies.mdx
@@ -1,6 +1,6 @@
 ---
 title: "column_anomalies"
-sidebarTitle: "column_anomalies"
+sidebarTitle: "Column anomalies"
 ---
 
 `elementary.column_anomalies`
