--- a/docs/data-tests/anomaly-detection-tests/dimension-anomalies.mdx
+++ b/docs/data-tests/anomaly-detection-tests/dimension-anomalies.mdx
@@ -1,6 +1,6 @@
 ---
+sidebarTitle: "Dimension anomalies"
 title: "dimension_anomalies"
-sidebarTitle: "dimension_anomalies"
 ---
 
 `elementary.dimension_anomalies`
