--- a/docs/data-tests/anomaly-detection-tests/event-freshness-anomalies.mdx
+++ b/docs/data-tests/anomaly-detection-tests/event-freshness-anomalies.mdx
@@ -1,6 +1,6 @@
 ---
+sidebarTitle: "Event freshness anomalies"
 title: "event_freshness_anomalies"
-sidebarTitle: "event_freshness_anomalies"
 ---
 
 `elementary.event_freshness_anomalies`
