--- a/docs/data-tests/anomaly-detection-tests/freshness-anomalies.mdx
+++ b/docs/data-tests/anomaly-detection-tests/freshness-anomalies.mdx
@@ -1,6 +1,6 @@
 ---
 title: "freshness_anomalies"
-sidebarTitle: "freshness_anomalies"
+sidebarTitle: "Freshness anomalies"
 ---
 
 `elementary.freshness_anomalies`
