--- a/docs/data-tests/anomaly-detection-tests/volume-anomalies.mdx
+++ b/docs/data-tests/anomaly-detection-tests/volume-anomalies.mdx
@@ -1,6 +1,6 @@
 ---
 title: "volume_anomalies"
-sidebarTitle: "volume_anomalies"
+sidebarTitle: "Volume anomalies"
 ---
 
 `elementary.volume_anomalies`
