--- a/docs/data-tests/schema-tests/exposure-tests.mdx
+++ b/docs/data-tests/schema-tests/exposure-tests.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Exposure validation tests"
+title: "Exposure validation test"
 ---
 
 Elementary dbt package includes **exposure validation tests, implemented as [dbt tests](https://docs.getdbt.com/docs/building-a-dbt-project/tests)**.
