--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -46,7 +46,7 @@ Monitor your data pipelines in minutes, in your dbt project. Gain immediate visi
 ## Key features
 
 <CardGroup cols={1}>
-  <Card title="Data anomaly detection" icon="monitor-waveform" iconType="solid">
+  <Card title="Data anomaly detection" icon="monitor-waveform" iconType="solid" href="/data-tests/introduction">
     Monitor data quality metrics, freshness, volume and schema changes.
   </Card>
   <Card
