--- a/docs/data-tests/schema-tests/schema-changes.mdx
+++ b/docs/data-tests/schema-tests/schema-changes.mdx
@@ -7,7 +7,7 @@ title: "Schema Changes"
 Executes schema changes monitor that alerts on deleted table, deleted or added columns, or change of data type of a column.
 Data Types note: Snowflake, Redshift and Postgres all has "synonym" data types, like `VARCHAR` and `TEXT` in Snowflake. These will be considered as equals by the tests. Types are converted internally to deal with this.
 
-<CodeGroup>
+<RequestExample>
 
 ```yml Models
 version: 2
@@ -30,4 +30,4 @@ models:
             severity: warn
 ```
 
-</CodeGroup>
+</RequestExample>
