--- a/docs/cloud/introduction.mdx
+++ b/docs/cloud/introduction.mdx
@@ -1,5 +1,7 @@
 ---
 title: "Elementary Cloud"
+sidebarTitle: "Introduction"
+icon: "cloud"
 ---
 
 Elementary Cloud is a data observability and data testing solution for teams using dbt. Monitor data pipelines, detect anomalies and test data in minutes, in your dbt project.
