--- a/docs/oss/deployment-and-configuration/elementary-in-production.mdx
+++ b/docs/oss/deployment-and-configuration/elementary-in-production.mdx
@@ -7,7 +7,7 @@ title: "Elementary in production"
   href="https://app.elementary-data.com/"
 ></Card>
 
-Running Elementary in production means to include the dbt package in your production dbt project,
+Running Elementary OSS in production means to include the dbt package in your production dbt project,
 and setting up an automated manner to run the Elementary CLI.
 
 You can choose any system that allows you to orchestrate a CLI execution, as long as it can meet the following requirements:
