--- a/docs/_snippets/cloud/signup-and-connect-elementary-cloud.mdx
+++ b/docs/_snippets/cloud/signup-and-connect-elementary-cloud.mdx
@@ -49,6 +49,6 @@ The syncs happen by default once an hour, but you can also [configure a triggere
 ## What's next?
 
 1. [Invite your team](/cloud/manage-team) to Elementary cloud 👥
-2. Connect Slack for alerting 🔔
+2. [Connect Slack](/cloud/guides/enable-slack-alerts) for alerting 🔔
 3. [Connect your code repository](/cloud/integrations/code-repo/connect-code-repo) to add tests configuration from the cloud 🔌
 4. [Connect your BI tool](/cloud/integrations/bi/connect-bi-tool) to automatically extend the lineage to dashboards as exposures 🚀
