--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -1,11 +1,7 @@
 ---
-title: "Install Elementary dbt package"
-sidebarTitle: "Install dbt package"
-icon: "square-1"
+title: "Elementary Quickstart"
+sidebarTitle: "Quickstart"
+icon: "circle-play"
 ---
 
-<Snippet file="quickstart-package-install.mdx" />
-
-## What's next?
-
-[Signup to Elementary cloud](/cloud/onboarding/signup) and connect your data warehouse to Elementary Cloud to sync the Elementary schema.
+<Snippet file="quickstart/quickstart-cards.mdx" />
