--- a/docs/overview/elementary-oss.mdx
+++ b/docs/overview/elementary-oss.mdx
@@ -5,3 +5,13 @@ icon: "square-terminal"
 ---
 
 Under construction 🚧
+
+
+<br />
+
+<Frame>
+  <img
+    src="https://raw.githubusercontent.com/elementary-data/elementary/master/static/report_ui.gif"
+    alt="Demo"
+  />
+</Frame>
