--- a/docs/oss/oss-introduction.mdx
+++ b/docs/oss/oss-introduction.mdx
@@ -4,36 +4,4 @@ sidebarTitle: "Introduction"
 icon: "square-terminal"
 ---
 
-Elementary OSS is a CLI tool you can deploy and orchestrate to send Slack alerts and self-host the Elementary report.
-
-<CardGroup cols={1}>
-  <Card
-    title="Quickstart Elementary OSS"
-    href="/oss/quickstart/quickstart-cli-package"
-  >
-    Install the Elementary dbt package and CLI tool.
-  </Card>
-</CardGroup>
-
-
-### CLI Guides
-
-<CardGroup cols={2}>
-  <Card title="Generate a report" icon="browsers" iconType="solid" href="/oss/guides/send-slack-alerts">
-  </Card>
-  <Card title="Send Slack alerts" icon="slack" href="/oss/guides/send-slack-alerts">
-  </Card>
-  <Card title="Share the report" icon="share-all" iconType="solid" href="/oss/guides/share-report-ui">
-  </Card>
-  <Card title="Deploy in production" icon="gear" iconType="solid" href="/oss/deployment-and-configuration/elementary-in-production">
-  </Card>
-</CardGroup>
-
-<br/>
-
-<Frame>
-  <img
-    src="https://raw.githubusercontent.com/elementary-data/elementary/master/static/report_ui.gif"
-    alt="Demo"
-  />
-</Frame>
+<Snippet file="oss/oss-introduction.mdx" />
