--- a/docs/overview/elementary-oss.mdx
+++ b/docs/overview/elementary-oss.mdx
@@ -4,14 +4,4 @@ sidebarTitle: "Elementary OSS"
 icon: "square-terminal"
 ---
 
-Under construction 🚧
-
-
-<br />
-
-<Frame>
-  <img
-    src="https://raw.githubusercontent.com/elementary-data/elementary/master/static/report_ui.gif"
-    alt="Demo"
-  />
-</Frame>
+<Snippet file="oss/oss-introduction.mdx" />
