--- a/docs/overview/elementary-oss.mdx
+++ b/docs/overview/elementary-oss.mdx
@@ -3,5 +3,21 @@ title: "Elementary OSS"
 sidebarTitle: "Elementary OSS"
 icon: "square-terminal"
 ---
+<Snippet file="oss/oss-introduction-opening.mdx" />
+
+<CardGroup cols={2}>
+  <Card
+    title="Quickstart Elementary OSS"
+    href="/oss/quickstart/quickstart-cli-package"
+  >
+    Install and configure the Elementary dbt package and CLI tool.
+  </Card>
+  <Card
+    title="Elementary OSS documentation"
+    href="/oss/quickstart/quickstart-cli-package"
+  >
+    Read more about Elementary OSS usage, guides and deployment
+  </Card>
+</CardGroup>
 
 <Snippet file="oss/oss-introduction.mdx" />
