buttons in intros

--- a/docs/overview/elementary-oss.mdx
+++ b/docs/overview/elementary-oss.mdx
@@ -14,9 +14,9 @@ icon: "square-terminal"
   </Card>
   <Card
     title="Elementary OSS documentation"
-    href="/oss/quickstart/quickstart-cli-package"
+    href="/oss/oss-introduction"
   >
-    Read more about Elementary OSS usage, guides and deployment
+    Read more about Elementary OSS usage, guides and deployment.
   </Card>
 </CardGroup>
 
