--- a/docs/cloud/introduction.mdx
+++ b/docs/cloud/introduction.mdx
@@ -4,4 +4,15 @@ sidebarTitle: "Introduction"
 icon: "cloud"
 ---
 
+<Snippet file="cloud/introduction-opening.mdx" />
+
+<CardGroup cols={1}>
+  <Card
+    title="Quickstart Elementary Cloud"
+    href="/cloud/onboarding/quickstart-dbt-package"
+  >
+    Start 30 days free trial, no credit card is required.
+  </Card>
+</CardGroup>
+
 <Snippet file="cloud/introduction.mdx" />
