--- a/docs/_snippets/cloud/introduction.mdx
+++ b/docs/_snippets/cloud/introduction.mdx
@@ -27,6 +27,7 @@
     - Automated volume, freshness and schema monitoring
     - Column level lineage
     - Automated lineage to BI tools dashboards
+    - Test management
     - Data catalog
     - Webhook triggered syncs
     - And more...
