--- a/docs/_snippets/quickstart/quickstart-cards.mdx
+++ b/docs/_snippets/quickstart/quickstart-cards.mdx
@@ -9,7 +9,7 @@
     Fully managed data observability solution with premium features.
     <br />
     Integrations:
-    <img src="https://res.cloudinary.com/diuctyblm/image/upload/v1699269702/cloud_integrations_4_qlaycc.png" />
+    <img noZoom src="https://res.cloudinary.com/diuctyblm/image/upload/v1699269702/cloud_integrations_4_qlaycc.png" />
   </Card>
   <Card
     title="Elementary OSS"
@@ -21,6 +21,6 @@
     Deploy, orchestrate and self-host Elementary CLI in your environment.
     <br />
     Integrations:
-    <img src="https://res.cloudinary.com/diuctyblm/image/upload/v1699269702/cli_integrations_4_bach1a.png" />
+    <img noZoom src="https://res.cloudinary.com/diuctyblm/image/upload/v1699269702/cli_integrations_4_bach1a.png" />
   </Card>
 </CardGroup>
