--- a/docs/features/lineage.mdx
+++ b/docs/features/lineage.mdx
@@ -1,5 +1,20 @@
 ---
-title: Lineage Graph
+title: End-to-End Data Lineage
+sidebarTitle: Data Lineage
 ---
 
-Under construction 🚧
+
+
+## Node info and test results
+
+
+## Lineage to downstream exposures
+
+Elementary lineage graph presents downstream 
+
+### Automated BI dashboards lineage
+
+## Column level lineage 
+
+<Snippet file="features/column-level-lineage.mdx" />
+
