--- a/docs/features/catalog.mdx
+++ b/docs/features/catalog.mdx
@@ -1,5 +1,16 @@
 ---
 title: "Data Catalog"
 ---
+<Snippet file="cloud/cloud-feature-tag.mdx" />
 
-Under construction 🚧
+On the Catalog tab you can now explore your datasets information - descriptions, columns, columns descriptions, latest update time and datasets health.
+From the dataset you can navigate directly to it’s lineage and test results.
+
+The goal is to make Elementary useful for more members of the data team, and to prevent the need to navigate between Elementary and other interfaces.
+
+<Frame>
+    <img
+        src="https://res.cloudinary.com/diuctyblm/image/upload/v1700485957/catalog-croped_r35636.gif"
+        alt="Elementary Catalog"
+    />
+</Frame>
